# esp-hosted

./: .gitignore
esp_hosted_fg/esp/esp_driver/network_adapter/: .gitignore  sdkconfig  sdkconfig.defaults.esp32c3
esp_hosted_fg/esp/esp_driver/network_adapter/components/peripheral/: CMakeLists.txt  peripherals.c
esp_hosted_fg/esp/esp_driver/network_adapter/components/peripheral/gpio/: peripheral_gpio.c  peripheral_gpio.h
esp_hosted_fg/esp/esp_driver/network_adapter/components/peripheral/i2c/: peripheral_i2c.c  peripheral_i2c.h  peripheral_i2c_tool.h
esp_hosted_fg/esp/esp_driver/network_adapter/components/peripheral/spi/: peripheral_spi.c  peripheral_spi.h
esp_hosted_fg/esp/esp_driver/network_adapter/components/shell/: CMakeLists.txt  cmd_i2c-tool.c  cmd_sys.c  idf_component.yml  shell.c  shell.h
esp_hosted_fg/esp/esp_driver/network_adapter/main/: CMakeLists.txt  Kconfig.projbuild  esp_hosted_coprocessor.c  idf_component.yml  nw_split_router.c  peer_data_example.c  peer_data_example.h  spi_slave_api.c
esp_hosted_fg/esp/esp_driver/network_adapter/scripts/: README.md  build.sh  build_all.sh  build_app.sh  env.sh  flash_sample.sh  get_sdkconfig.sh  partitions_4m_single.csv  size.sh  size_analyze.sh
esp_hosted_fg/host/control_lib/src/: ctrl_core.c
esp_hosted_fg/host/linux/host_control/c_support/: Makefile  esp_hosted_host_ext_peer_data_transfer.h  hosted_cli.c  test.c  (+4 more)
esp_hosted_ng/esp/esp_driver/network_adapter/: .gitignore  sdkconfig  sdkconfig.defaults.esp32c3
esp_hosted_ng/esp/esp_driver/network_adapter/components/device_driver/: CMakeLists.txt
esp_hosted_ng/esp/esp_driver/network_adapter/components/device_driver/display/ssd1306/: oled.c  oled.h  oled_animation.c  oled_animation.h  oled_ui.c  oled_ui.h  oled_ui_map.c  oled_ui_terminal.c  ui_sys.c
esp_hosted_ng/esp/esp_driver/network_adapter/components/device_driver/input/: ec11.c  ec11.h
esp_hosted_ng/esp/esp_driver/network_adapter/components/device_driver/sensor/: aht.c  bh1750.c  bmp280.c  sensor.c  sensor.h
esp_hosted_ng/host/: .gitignore  main.c
esp_hosted_ng/host/spi/: esp_spi.c
(+44 files in other folders)
